<resources>
    <string name="app_name">Assignment</string>

    <!--Left Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_text_msg">Hello, User</string>
    <string name="exit_msg">Press back again to exit</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="tax_msg">(Inclusive all taxes)</string>
    <string name="first_launch_msg">Preparing for the first launch</string>
    <string name="no_network_msg">You need to connect to the internet to access this content. Please check your internet connection.</string>
    <string name="retry">Retry</string>
    <string name="sort">Sort</string>

    <!--Font Awesome Icons-->     
    <string name="icon_angle_down">&#xf107;</string> 
    <string name="icon_angle_up">&#xf106;</string>
    <string name="icon_chevron_left">&#xf104;</string>
    <string name="icon_sort_by_attributes">&#xf160;</string>

</resources>
