<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/titleRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightBlack"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/backIconRelativeLayout"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true">

            <TextView
                android:id="@+id/backIconTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_chevron_left"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/twenty_sp"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/backIconRelativeLayout"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tshirt"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/bottom_border">

                <TextView
                    android:id="@+id/productPriceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sixteen_sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:id="@+id/taxTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sixteen_sp"
                    android:text="@string/tax_msg"
                    android:singleLine="true"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/colorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/fourteen_sp"
                android:textStyle="bold"
                android:text="@string/color"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/colorsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleRelativeLayout"
                android:orientation="horizontal"
                android:background="@drawable/bottom_border"
                android:paddingBottom="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/sizeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/fourteen_sp"
                android:text="@string/size"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sizeRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleRelativeLayout"
                android:orientation="horizontal"
                android:background="@drawable/bottom_border"
                android:paddingBottom="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
